k8s/services/nextcloud/extra/collabora/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collabora
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: collabora
          image: docker.io/collabora/code
          ports:
            - name: http
              containerPort: 9980
              protocol: TCP
          securityContext:
            capabilities:
              add:
                - MKNOD
      nodeSelector:
        k8s.as212024.net/role: storage
      tolerations:
        - key: k8s.as212024.net/role
          operator: Equal
          value: storage
          effect: NoExecute
